melhorando forma de gerar o número do protocolo